--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
       <filter-class>spark.servlet.SparkFilter</filter-class>
       <init-param>
         <param-name>applicationClass</param-name>
-        <param-value>com.orangefunction.tomcatredissessionmanager.exampleapp.WebApp</param-value>
+        <param-value>org.ranran.tomcatredissessionmanager.exampleapp.WebApp</param-value>
       </init-param>
     </filter>
 
