--- a/tomcat-redis-session-manager/build.gradle
+++ b/tomcat-redis-session-manager/build.gradle
@@ -9,6 +9,18 @@ repositories {
   mavenCentral()
 }
 
+sourceSets {
+    main {
+        java {
+            srcDir 'src/main/java'
+            srcDir 'test/main/java'
+        }
+        resources {
+            srcDir 'src/main/resources'
+        }
+    }
+}  
+
 compileJava {
   sourceCompatibility = 1.7
   targetCompatibility = 1.7
@@ -20,13 +32,15 @@ dependencies {
   compile group: 'redis.clients', name: 'jedis', version: '2.8.1'
   compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.2'
   //compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
-
-  testCompile group: 'junit', name: 'junit', version: '4.+'
+  
+  //junit changed as essential dependences causes the org.ranran.domain.User is used for frontend
+  compile group: 'junit', name: 'junit', version: '4.+' 
   testCompile 'org.hamcrest:hamcrest-core:1.3'
   testCompile 'org.hamcrest:hamcrest-library:1.3'
   testCompile 'org.mockito:mockito-all:1.9.5'
   testCompile group: 'org.apache.tomcat', name: 'tomcat-coyote', version: '7.0.27'
 }
+
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
   classifier = 'javadoc'
